<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddRecipeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/ImageCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/IV_UploadRecipePic"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:backgroundTint="@color/transparent"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                android:src="@drawable/add_image_placeholder" />

        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/RecipeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/recipe_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ImageCardView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ET_RecipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:inputType="text"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Spinner"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/recipe_category"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/RecipeName">

            <AutoCompleteTextView
                android:id="@+id/Spinner_RecipeCategory"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="none"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Spinner">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:importantForAccessibility="no"
                android:padding="2dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/vector_preptime" />

            <Space
                android:layout_width="8dp"
                android:layout_height="match_parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/PrepTime"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/prep_time"
                android:textAlignment="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ET_PrepTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="text"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:importantForAccessibility="no"
                android:padding="2dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/vector_cooktime" />

            <Space
                android:layout_width="8dp"
                android:layout_height="match_parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/CookTime"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/cook_time"
                android:textAlignment="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ET_CookTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="text"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:importantForAccessibility="no"
                android:padding="2dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/vector_servingsize" />

            <Space
                android:layout_width="8dp"
                android:layout_height="match_parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ServingSize"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/serving_size"
                android:textAlignment="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ET_ServingSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="text"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/ingredients"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ET_Ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:inputType="textMultiLine"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/method"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Ingredients">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ET_Method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:inputType="textMultiLine"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/VideoLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/video_link_optional"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Method">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ET_VideoLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:inputType="text"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/VideoLink">

            <Button
                android:id="@+id/But_CancelRecipe"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/cancel"
                android:textSize="15sp" />

            <Button
                android:id="@+id/But_SaveRecipe"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/save"
                android:textSize="15sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>